continue fixing
- table title problem px not working(done)
-navbar overlap prob (done)
product description whiite-space normal(done)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27128,3 +27128,11 @@ pre[class*=language-] {
     overflow-x: auto;
 }
 
+.navbar-vertical.navbar-expand-xs {
+    z-index: 0;
+  }
+
+.table td {
+    white-space: normal;
+}
+
