--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -28,3 +28,11 @@
     width: 100%;
     overflow-x: auto;
 }
+
+.navbar-vertical.navbar-expand-xs {
+    z-index: 0;
+  }
+
+.table td {
+    white-space: normal;
+}
